Inital commit of movie portion

--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -41,3 +41,4 @@ Plus court film</string>
     <string name="Newest">Nouveau film </string>
     <string name="MovieAvgR">Libération moyenne</string>
 
+</resources>
